@startuml VenteFormation

class Contact {
    -Integer id
    -String nom
    -String prenom
    -String email
    -String telephone
    -String adresse
}

class Categorie {
    -Integer id
    -String nom
}

class Utilisateur {
    -Integer id
    -String email
    -String motDePasse

}

class Message {
    -Integer id
    -String contenu
    -Date dateEnvoi
}

Utilisateur "1" -- "0..n" Contact : possède
Categorie "0..1" -- "0..n" Contact : appartient à

Utilisateur "1" -- "0..n" Message : envoie
Contact "1" -- "0..n" Message : destinataire

@enduml